--- a/src/main/resources/templates/article/form.html
+++ b/src/main/resources/templates/article/form.html
@@ -11,8 +11,10 @@
     <script type="text/javascript" src="/static/js/angular.min.js"></script>
 </head>
 <body ng-controller="articleController">
-
-    <summernote height="500" ng-model="text"></summernote>
+    <fieldset class="form-group">
+        <input class="form-control" style="font-size: 22px; border: none;font-family: '微软雅黑';font-weight: bold;" placeholder="文章标题">
+    </fieldset>
+    <summernote height="500" on-image-upload="imageUpload(files)" editable="editable" editor="editor" placeholder="正文" ng-model="text"></summernote>
 </body>
 <script type="text/javascript" src="/static/js/angular-summernote.min.js"></script>
 <script type="text/javascript" src="/static/js/summernote.min.js"></script>
@@ -20,7 +22,25 @@
 <script type="text/javascript" th:inline="javascript">
     var app = angular.module('articleApp', ['summernote']);
     app.controller('articleController', function ($scope,$http) {
-        $scope.text = 'hello,world';
+        $scope.imageUpload = function(files) {
+            sendFile(files[0]);
+        }
+
+        function sendFile(file) {
+            var data = new FormData();
+            data.append("file", file);
+            $.ajax({
+                data: data,
+                type: "POST",
+                url: "/qiniu/upload/article",
+                cache: false,
+                contentType: false,
+                processData: false,
+                success: function(data) {
+                    $scope.editor.summernote('insertImage',data.data);
+                 }
+            });
+        }
     });
 </script>
 </html>
