--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,9 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>VisualLife</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/base.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css">
+
 </head>
 <body>
-home
+<nav class="navbar navbar-fixed-top navbar-light bg-faded">
+    <div class="container">
+        <a class="navbar-brand" href="">VisualLife</a>
+        <ul class="nav navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="">文章</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<div class="container" style="margin-top:4em; ">
+    <div class="card-columns">
+        <div class="card">
+            <img class="card-img-top widthFull" src="">
+            <div class="card-block">
+                <h4 class="card-title">title</h4>
+                <p class="card-text">p de duan luo</p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
