--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -40,7 +40,7 @@
 
             <fieldset class="form-group"
                       ng-class="{'has-error':registerForm.name.$dirty && registerForm.name.$invalid,'has-success':registerForm.name.$dirty && registerForm.name.$valid}">
-                <label ng-cloak class="control-label" ng-show="registerForm.name.$dirty && registerForm.name.$invalid">必须填写用户名，且长度为2~20位</label>
+                <label ng-cloak class="control-label" ng-show="registerForm.name.$dirty && registerForm.name.$invalid">请填写昵称，且长度为2~20位</label>
                 <div class="input-group">
                     <label class="input-group-addon"><i class="fa fa-user"></i> </label>
                     <input class="form-control" placeholder="用户名" type="text" name="name" required ng-minlength="2"
@@ -51,7 +51,7 @@
             <fieldset class="form-group"
                       ng-class="{'has-error':registerForm.password.$dirty && registerForm.password.$invalid,'has-success':registerForm.password.$dirty && registerForm.password.$valid}">
                 <label ng-cloak class="control-label"
-                       ng-show="registerForm.password.$dirty && registerForm.password.$invalid">必须填写密码，且长度为6~12位</label>
+                       ng-show="registerForm.password.$dirty && registerForm.password.$invalid">请填写密码，且长度为6~12位</label>
                 <div class="input-group">
                     <label class="input-group-addon"><i class="fa fa-lock"></i> </label>
                     <input class="form-control" placeholder="密码" type="password" name="password" required
@@ -95,6 +95,7 @@
         </form>
     </div>
 </div>
+<div th:include="fragment::tooltip"></div>
 <script type="text/javascript" th:inline="javascript">
     var app = angular.module('registerApp', []);
     app.controller('registerController', function ($scope, $http) {
