--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>VisualLife</title>
@@ -21,11 +21,11 @@
 </nav>
 <div class="container" style="margin-top:4em; ">
     <div class="card-columns">
-        <div class="card">
-            <img class="card-img-top widthFull" src="">
+        <div class="card" th:each="article:${page.getContent()}">
+            <img class="card-img-top widthFull" th:src="${article.coverImg}">
             <div class="card-block">
-                <h4 class="card-title">title</h4>
-                <p class="card-text">p de duan luo</p>
+                <h4 class="card-title" th:text="${article.title}"></h4>
+                <p class="card-text" th:text="${article.summarize}"></p>
             </div>
         </div>
     </div>
