文章编辑页面修改

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -59,7 +59,7 @@
                 <fieldset class="form-group">
                    <div style="padding-top: 20px;">
                        <label><input type="checkbox"  value="true" ng-model="rememberMe">&nbsp;记住我</label>
-                       <a href="/register" class="pull-right">去注册<i class="fa fa-arrow-circle-right"></i></a>
+                       <a href="/registerPage" class="pull-right">去注册<i class="fa fa-arrow-circle-right"></i></a>
                    </div>
                 </fieldset>
             </form>
