--- a/src/main/resources/templates/article/form.html
+++ b/src/main/resources/templates/article/form.html
@@ -3,12 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/base.css">
     <link rel="stylesheet" type="text/css" href="/static/css/summernote.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/webuploader.css">
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css">
+    <!--<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">-->
     <script type="text/javascript" src="/static/js/jquery-1.11.1.min.js"></script>
     <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/static/js/angular.min.js"></script>
+    <script type="text/javascript" src="/static/js/webuploader.html5only.min.js"></script>
+    <style type="text/css">
+        .card {
+            position: relative;
+            margin-bottom: .75rem;
+            border: .0625rem solid #e5e5e5;
+            border-radius: .25rem;
+        }
+
+        .card-block {
+            padding: 1.25rem;
+        }
+
+        .card-title {
+            margin-top: 0;
+            margin-bottom: .75rem;
+        }
+
+        .card-subtitle {
+            margin-top: -.375rem;
+            margin-bottom: 0;
+        }
+
+        .card-text:last-child {
+            margin-bottom: 0;
+        }
+        .card-img-top {
+            border-radius: .25rem .25rem 0 0;
+        }
+    </style>
 </head>
 <body ng-controller="articleController">
 <div class="container">
@@ -36,7 +70,7 @@
         <div class="form-group" style="padding-top: 1em;">
             <textarea class="form-control" placeholder="封面文字" ng-model="article.summarize"></textarea>
         </div>
-        <button class="btn btn-info-outline" ng-click="saveArticle()"><i class="fa fa-pencil"></i>发表文章</button>
+        <button class="btn btn-info-outline" ng-click="saveArticle()"><i class="fa fa-pencil"></i>&nbsp;发表文章</button>
     </div>
 </div>
 <div th:include="fragment::tooltip"></div>
@@ -49,6 +83,7 @@
     app.controller('articleController', function ($scope, $http) {
 
         $scope.article = {
+            id:[[${form.id}]],
             title: [[${form.title}]],
             content: [[${form.content}]],
             coverImg: [[${form.coverImg}]],
@@ -61,7 +96,9 @@
             $http.post('/article/add', $scope.article).success(function (data) {
                 if (data.code) {
                     Tooltip.ok(data.msg);
-                    location.href = data.jumpUrl;
+                    setTimeout(function () {
+                        location.href = data.jumpUrl;
+                    }, 1500);
                 } else {
                     Tooltip.fail(data.msg);
                 }
@@ -83,7 +120,7 @@
         });
         uploader.on( 'uploadSuccess', function( file , response) {
             if(response.code == 1){
-                $scope.news.rollImg = response.data;
+                $scope.article.coverImg = response.data;
                 $scope.$apply();
             }else{
                 Tooltip.fail(response.msg);
