登录页面样式修改

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -45,13 +45,13 @@
             <form name="loginForm">
                 <fieldset class="form-group">
                     <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-user"></i></div>
+                        <div class="input-group-addon"><i class="fa fa-user width10"></i></div>
                         <input type="text" class="form-control" placeholder="用户名" ng-model="nameOrMobile">
                     </div>
                 </fieldset>
                 <fieldset class="form-group">
                     <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-lock"></i> </div>
+                        <div class="input-group-addon"><i class="fa fa-lock width10"></i> </div>
                         <input type="password" class="form-control" placeholder="密码" ng-model="password">
                     </div>
                 </fieldset>
