--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" type="text/css" href="/static/css/base.css">
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css">
-
 </head>
 <body>
+<div th:include="fragment::files"></div>
 <nav class="navbar navbar-fixed-top navbar-light bg-faded">
     <div class="container">
         <a class="navbar-brand" href="">VisualLife</a>
@@ -17,6 +17,10 @@
                 <a class="nav-link" href="">文章</a>
             </li>
         </ul>
+        <form class="form-inline pull-right" th:action="@{/home}">
+            <input type="text" class="form-control" placeholder="文章标题" name="title" th:value="${query.title}">
+            <button class="form-control" type="submit"><i class="fa fa-search"></i></button>
+        </form>
     </div>
 </nav>
 <div class="container" style="margin-top:4em; ">
