--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -130,7 +130,7 @@
                     }, 3000);
                 } else {
                     angular.element("#alertInfo").addClass("alert-danger");
-                    setResponseMsg("注册失败！" + data.detail, true);
+                    setResponseMsg("注册失败！" + data.msg, true);
                 }
             });
         };
