--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,22 +11,35 @@
 <div th:include="fragment::files"></div>
 <nav class="navbar navbar-fixed-top navbar-light bg-faded">
     <div class="container">
-        <a class="navbar-brand" href="">VisualLife</a>
-        <ul class="nav navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="">文章</a>
-            </li>
-        </ul>
-        <form class="form-inline pull-right" th:action="@{/home}">
+        <div class="col-md-5">
+            <a class="navbar-brand" href="">VisualLife</a>
+            <ul class="nav navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="">文章</a>
+                </li>
+            </ul>
+        </div>
+        <form class="form-inline col-md-4" th:action="@{/home}">
             <input type="text" class="form-control" placeholder="文章标题" name="title" th:value="${query.title}">
             <button class="form-control" type="submit"><i class="fa fa-search"></i></button>
         </form>
+        <div class="dropdown col-md-3">
+            <a id="userBlock" data-target="#" data-toggle="dropdown">
+                用户名
+            </a>
+            <div class="dropdown-menu" aria-labelledby="userBlock">
+                <a class="dropdown-item" href="#"><i class="fa fa-home"></i>&nbsp;&nbsp;我的主页</a>
+                <a class="dropdown-item" href="#"><i class="fa fa-cog"></i>&nbsp;&nbsp;设置</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> &nbsp;&nbsp;退出</a>
+            </div>
+        </div>
     </div>
 </nav>
 <div class="container" style="margin-top:4em; ">
     <div class="card-columns">
         <div class="card" th:each="article:${page.getContent()}">
-            <img class="card-img-top widthFull" th:src="${article.coverImg}">
+            <img class="card-img-top widthFull" th:if="${article.coverImg != null}" th:src="${article.coverImg}">
             <div class="card-block">
                 <h4 class="card-title" th:text="${article.title}"></h4>
                 <p class="card-text" th:text="${article.summarize}"></p>
