--- a/src/main/resources/templates/article/form.html
+++ b/src/main/resources/templates/article/form.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </div>
-        <button id="coverImgBtn" class="btn btn-sm btn-info-outline">选择封面图片</button>
+        <button id="coverImgBtn" class="btn btn-sm">选择封面图片</button>
         <div class="form-group" style="padding-top: 1em;">
             <textarea class="form-control" placeholder="封面文字" ng-model="article.summarize"></textarea>
         </div>
