--- a/src/main/resources/templates/article/userList.html
+++ b/src/main/resources/templates/article/userList.html
@@ -6,33 +6,62 @@
     <link rel="stylesheet" type="text/css" href="/static/css/base.css">
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/x0popup.min.css">
+    <style type="text/css">
+        .card-block .remove{
+            display: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
 <div th:include="fragment::files"></div>
-<div class="container">
-    <div class="card" ng-repeat="article in articles track by $index">
-        <div class="pull-left"><img src="{{article.picture}}" class="width80 height80"></div>
-        <div class="pull-left">
-            <p ng-bind="article.description"></p>
+<div class="container" ng-controller="articleController">
+    <div class="card margin-top10" ng-repeat="article in articles track by $index">
+        <div class="card-block" ng-mouseenter="showRemoveBtn($event)" ng-mouseleave="hideRemoveBtn($event)">
+            <div class="pull-left"><img ng-if="article.coverImg!=null" ng-src="{{article.coverImg}}" class="width80 height80"></div>
+            <div class="pull-left padding10">
+                <div class="height50">
+                    <h3 ng-bind="article.title"></h3>
+                    <p ng-bind="article.summarize"></p>
+                </div>
+                <div class="height10">
+                    <small class="text-muted">{{article.createdTime | dateFilter}}</small>
+                    <i class="fa fa-trash-o text-muted remove margin-left10" ng-click="removeArticle($index,article.id)"></i>
+                </div>
+            </div>
+            <div class="clearfix"></div>
         </div>
     </div>
 </div>
 <div th:include="fragment::tooltip"></div>
 </body>
+<script type="text/javascript" src="/static/js/common-filters.js"></script>
+<script type="text/javascript" src="/static/js/x0popup.min.js"></script>
+
 <script type="text/javascript" th:inline="javascript">
-    var app = angular.module('articleApp', []);
+    var app = angular.module('articleApp', ['filter']);
     app.controller('articleController', function ($scope, $http) {
-        $scope.articles = [];
-        $http.get('/article/user/list',{
-            page:1,
-            size:500
-        }).success(function (data) {
-           if(data.code) {
-               $scope.articles = data.data;
-           }else{
-               Tooltip.fail(data.msg);
-           }
-        });
+        $scope.articles = [[${page.content}]];
+        $scope.showRemoveBtn = function (e) {
+            angular.element(e.target).find('.remove').show();
+        };
+        $scope.hideRemoveBtn = function (e) {
+            angular.element(e.target).find('.remove').hide();
+        };
+        $scope.removeArticle = function (index,id) {
+            x0p('确认删除',null,'warning',function (button) {
+                if(button == 'warning'){
+                    $http.post('/article/remove/'+id).success(function (data) {
+                        if(data.code) {
+                            $scope.articles.splice(index, 1);
+                        }else{
+                            Tooltip.fail(data.msg);
+                        }
+                    });
+                }
+            });
+        };
     });
 </script>
 </html>
