--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -53,6 +53,7 @@
 .margin-right20{margin-right: 2em;}
 .margin-right10{margin-right: 1em;}
 .margin-top10{margin-top: 1em;}
+.margin-top40{margin-top: 4em;}
 .margin-top50{margin-top: 5em;}
 .margin-bottom20{margin-bottom:2em;}
 .listNoneStyle{list-style: none;}
@@ -79,9 +80,12 @@
 .bold{font-weight: bold;}
 .bold500{font-weight: 500;}
 .imgBorder{box-shadow:0.2em 0.2em 0.5em black;width:20em;height:20em;margin: 1em;}
-.shadow{box-shadow:0.3em 0.3em 0.3em black;}
+.shadow1{box-shadow:0.1em 0.1em 0.1em black;}
+.shadow2{box-shadow:0.2em 0.2em 0.2em black;}
+.shadow3{box-shadow:0.3em 0.3em 0.3em black;}
 .backArrow{font-size: 1.05em;font-weight: 300;}
 .inputLabel{border-left: solid red;padding-left: 0.5em;line-height: 1.6em;}
 .textGrey{color: grey;}
 .textBlack{color: black;}
+.borderNone{border: none;}
 body{font-size: 62.5%;}
