--- a/src/main/resources/templates/article/userList.html
+++ b/src/main/resources/templates/article/userList.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" ng-app="articleApp">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/base.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/x0popup.min.css">
     <style type="text/css">
         .card-block .remove{
             display: none;
@@ -15,9 +11,8 @@
     </style>
 </head>
 <body>
-<div th:include="fragment::files"></div>
 <div class="container" ng-controller="articleController">
-    <div class="card margin-top10" ng-repeat="article in articles track by $index">
+    <div class="card" ng-repeat="article in articles track by $index">
         <div class="card-block" ng-mouseenter="showRemoveBtn($event)" ng-mouseleave="hideRemoveBtn($event)">
             <div class="pull-left"><img ng-if="article.coverImg!=null" ng-src="{{article.coverImg}}" class="width80 height80"></div>
             <div class="pull-left padding10">
@@ -26,7 +21,7 @@
                     <p ng-bind="article.summarize"></p>
                 </div>
                 <div class="height10">
-                    <small class="text-muted">{{article.createdTime | dateFilter}}</small>
+                    <small class="text-muted">{{article.createdTime | date:'yyyy-MM-dd HH:mm'}}</small>
                     <i class="fa fa-trash-o text-muted remove margin-left10" ng-click="removeArticle($index,article.id)"></i>
                 </div>
             </div>
@@ -34,34 +29,5 @@
         </div>
     </div>
 </div>
-<div th:include="fragment::tooltip"></div>
 </body>
-<script type="text/javascript" src="/static/js/common-filters.js"></script>
-<script type="text/javascript" src="/static/js/x0popup.min.js"></script>
-
-<script type="text/javascript" th:inline="javascript">
-    var app = angular.module('articleApp', ['filter']);
-    app.controller('articleController', function ($scope, $http) {
-        $scope.articles = [[${page.content}]];
-        $scope.showRemoveBtn = function (e) {
-            angular.element(e.target).find('.remove').show();
-        };
-        $scope.hideRemoveBtn = function (e) {
-            angular.element(e.target).find('.remove').hide();
-        };
-        $scope.removeArticle = function (index,id) {
-            x0p('确认删除',null,'warning',function (button) {
-                if(button == 'warning'){
-                    $http.post('/article/remove/'+id).success(function (data) {
-                        if(data.code) {
-                            $scope.articles.splice(index, 1);
-                        }else{
-                            Tooltip.fail(data.msg);
-                        }
-                    });
-                }
-            });
-        };
-    });
-</script>
 </html>
