--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -12,6 +12,32 @@
     <script type="text/javascript" src="/static/js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/static/js/angular.min.js"></script>
     <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css">
+</div>
+<div th:fragment="navbar">
+    <div th:include="fragment::files"></div>
+    <nav class="navbar navbar-fixed-top navbar-light bg-red">
+        <div class="container">
+            <div class="col-md-5">
+                <a class="navbar-brand" href="">VisualLife</a>
+                <ul class="nav navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/home">文章</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="dropdown col-md-3">
+                <a th:if="${session.user == null}" href="/loginPage">登录/注册</a>
+                <a th:if="${session.user != null}" id="userBlock" data-target="#" data-toggle="dropdown" href="" th:text="${session.user.name}">
+                </a>
+                <div class="dropdown-menu" aria-labelledby="userBlock">
+                    <a class="dropdown-item" href="/myHome#/article"><i class="fa fa-home"></i>&nbsp;&nbsp;我的主页</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/logout"><i class="fa fa-power-off"></i> &nbsp;&nbsp;退出</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 </div>
 <div th:fragment="tooltip">
     <style type="text/css">
