--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,44 +6,51 @@
     <link rel="stylesheet" type="text/css" href="/static/css/base.css">
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css">
+    <style type="text/css">
+        .writeBtn{
+            position: fixed;top:3.2em;right: 1em;
+        }
+    </style>
 </head>
 <body>
 <div th:include="fragment::files"></div>
-<nav class="navbar navbar-fixed-top navbar-light bg-faded">
+<nav class="navbar navbar-fixed-top navbar-light bg-red shadow2">
     <div class="container">
         <div class="col-md-5">
-            <a class="navbar-brand" href="">VisualLife</a>
+            <a class="navbar-brand">VisualLife</a>
             <ul class="nav navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="">文章</a>
+                    <a class="nav-link" href="/home">文章</a>
                 </li>
             </ul>
         </div>
         <form class="form-inline col-md-4" th:action="@{/home}">
-            <input type="text" class="form-control" placeholder="文章标题" name="title" th:value="${query.title}">
-            <button class="form-control" type="submit"><i class="fa fa-search"></i></button>
+            <input type="text" class="form-control bg-red" style="border: none;border-bottom: solid 1px black;" placeholder="文章标题" name="title" th:value="${query.title}">
+            <button class="form-control bg-red" style="border: none;" type="submit"><i class="fa fa-search"></i></button>
         </form>
         <div class="dropdown col-md-3">
-            <a id="userBlock" data-target="#" data-toggle="dropdown">
-                用户名
+            <a th:if="${session.user == null}" href="/loginPage">登录/注册</a>
+            <a th:if="${session.user != null}" id="userBlock" data-target="#" data-toggle="dropdown" href="" th:text="${session.user.name}">
             </a>
             <div class="dropdown-menu" aria-labelledby="userBlock">
-                <a class="dropdown-item" href="#"><i class="fa fa-home"></i>&nbsp;&nbsp;我的主页</a>
-                <a class="dropdown-item" href="#"><i class="fa fa-cog"></i>&nbsp;&nbsp;设置</a>
+                <a class="dropdown-item" href="/myHome#/article"><i class="fa fa-home"></i>&nbsp;&nbsp;我的主页</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> &nbsp;&nbsp;退出</a>
+                <a class="dropdown-item" href="/logout"><i class="fa fa-power-off"></i> &nbsp;&nbsp;退出</a>
             </div>
         </div>
     </div>
 </nav>
 <div class="container" style="margin-top:4em; ">
+    <div>
+        <a class="btn btn-lg writeBtn" href="/article/add"><i class="fa fa-pencil"></i>&nbsp;&nbsp; 写文章</a>
+    </div>
     <div class="card-columns">
-        <div class="card" th:each="article:${page.getContent()}">
+        <div class="card shadow1" th:each="article:${page.getContent()}">
             <img class="card-img-top widthFull" th:if="${article.coverImg != null}" th:src="${article.coverImg}">
             <div class="card-block">
                 <h4 class="card-title" th:text="${article.title}"></h4>
                 <p class="card-text" th:text="${article.summarize}"></p>
-                <p class="card-text" th:text="${#dates.format(article.createdTime,'yyyy-MM-dd HH:mm')}"></p>
+                <p class="card-text"><small class="text-muted" th:text="${#dates.format(article.createdTime,'yyyy-MM-dd')}"></small></p>
             </div>
         </div>
     </div>
