--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,50 +10,41 @@
         .writeBtn{
             position: fixed;top:3.2em;right: 1em;
         }
+        .search::-webkit-input-placeholder{
+            color: rgba(73, 73, 75, 0.6) !important;
+        }
     </style>
 </head>
 <body>
-<div th:include="fragment::files"></div>
-<nav class="navbar navbar-fixed-top navbar-light bg-red shadow2">
-    <div class="container">
-        <div class="col-md-5">
-            <a class="navbar-brand">VisualLife</a>
-            <ul class="nav navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/home">文章</a>
-                </li>
-            </ul>
-        </div>
-        <form class="form-inline col-md-4" th:action="@{/home}">
-            <input type="text" class="form-control bg-red" style="border: none;border-bottom: solid 1px black;" placeholder="文章标题" name="title" th:value="${query.title}">
-            <button class="form-control bg-red" style="border: none;" type="submit"><i class="fa fa-search"></i></button>
-        </form>
-        <div class="dropdown col-md-3">
-            <a th:if="${session.user == null}" href="/loginPage">登录/注册</a>
-            <a th:if="${session.user != null}" id="userBlock" data-target="#" data-toggle="dropdown" href="" th:text="${session.user.name}">
-            </a>
-            <div class="dropdown-menu" aria-labelledby="userBlock">
-                <a class="dropdown-item" href="/myHome#/article"><i class="fa fa-home"></i>&nbsp;&nbsp;我的主页</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="/logout"><i class="fa fa-power-off"></i> &nbsp;&nbsp;退出</a>
-            </div>
-        </div>
-    </div>
-</nav>
-<div class="container" style="margin-top:4em; ">
+<div th:include="fragment::navbar"></div>
+<div class="container margin-top40">
     <div>
         <a class="btn btn-lg writeBtn" href="/article/add"><i class="fa fa-pencil"></i>&nbsp;&nbsp; 写文章</a>
     </div>
     <div class="card-columns">
-        <div class="card shadow1" th:each="article:${page.getContent()}">
-            <img class="card-img-top widthFull" th:if="${article.coverImg != null}" th:src="${article.coverImg}">
+        <div class="article card" th:each="article:${page.getContent()}">
+            <a th:href="@{'/article/'+${article.id}}"><img class="card-img-top widthFull" th:if="${article.coverImg != null}" th:src="${article.coverImg}">
             <div class="card-block">
-                <h4 class="card-title" th:text="${article.title}"></h4>
-                <p class="card-text" th:text="${article.summarize}"></p>
-                <p class="card-text"><small class="text-muted" th:text="${#dates.format(article.createdTime,'yyyy-MM-dd')}"></small></p>
+                <h5 class="card-title" th:text="${article.title}"></h5>
+                <p class="card-text text-muted" th:text="${article.summarize}"></p>
+                <p class="card-text"><small class="text-muted" th:text="${#dates.format(article.createdTime,'yyyy/MM/dd')}"></small></p>
             </div>
+            </a>
         </div>
     </div>
 </div>
 </body>
+<script type="text/javascript">
+    $(function(){
+        var colors = ['#bd8c7d','#d1bfa7','#3a4660','#c9af98','#c9af98','#ed8a63','#845007','#21A8A3'];
+        function changeColor() {
+            $('.article.card').each(function (i,element) {
+                var index = parseInt(Math.random()*8);
+                var shadow = '0em -0.3em 0em '+ colors[index] + ' inset';
+                $(element).css('box-shadow',shadow);
+            });
+        }
+        changeColor();
+    });
+</script>
 </html>
