编辑页面样式修改

--- a/src/main/resources/templates/myHome.html
+++ b/src/main/resources/templates/myHome.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>我的主页</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/base.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/jquery-accordion-menu.css">
     <link rel="stylesheet" type="text/css" href="/static/css/x0popup.min.css">
+
 </head>
 <body>
 <div th:include="fragment::navbar"></div>
 <div class="container margin-top40">
     <div class="col-md-4">
-        <div id="jquery-accordion-menu" style="min-width: 220px;box-shadow: 0 5px 10px #333" class="jquery-accordion-menu red">
+        <div id="jquery-accordion-menu" style="min-width: 220px;box-shadow: 0 5px 10px #333;" class="jquery-accordion-menu">
             <ul id="demo-list">
                 <li><a href="#/article"><i class="fa fa-file-text"></i>我的文章 </a></li>
                 <li><a href="#/story"><i class="fa fa-glass"></i>我的故事 </a></li>
