--- a/src/main/resources/templates/article/detail.html
+++ b/src/main/resources/templates/article/detail.html
@@ -6,10 +6,18 @@
     <link rel="stylesheet" type="text/css" href="/static/css/base.css">
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css">
+    <style type="text/css">
+        blockquote {
+            padding: 10px 20px;
+            margin: 0 0 20px;
+            font-size: 17.5px;
+            border-left: 5px solid #94785e;
+        }
+    </style>
 </head>
 <body>
 <div th:include="fragment::navbar"></div>
-<div class="container margin-top40">
+<div class="container margin-top50">
     <div class="text-center">
         <h4 th:text="${form.title}"></h4>
     </div>
@@ -19,8 +27,9 @@
             <span th:text="${#dates.format(form.createdTime,'yyyy/MM/dd')}"></span>
         </small>
     </div>
+    <hr>
     <div>
-        <p th:text="${form.content}"></p>
+        <p th:utext="${form.content}"></p>
     </div>
 </div>
 <div th:include="fragment::tooltip"></div>
