--- a/src/main/resources/templates/article/form.html
+++ b/src/main/resources/templates/article/form.html
@@ -42,6 +42,13 @@
         .card-img-top {
             border-radius: .25rem .25rem 0 0;
         }
+
+        blockquote {
+            padding: 10px 20px;
+            margin: 0 0 20px;
+            font-size: 17.5px;
+            border-left: 5px solid #94785e;
+        }
     </style>
 </head>
 <body>
