--- a/src/main/resources/templates/article/userList.html
+++ b/src/main/resources/templates/article/userList.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -14,14 +14,16 @@
 <div class="container" ng-controller="articleController">
     <div class="card" ng-repeat="article in articles track by $index">
         <div class="card-block" ng-mouseenter="showRemoveBtn($event)" ng-mouseleave="hideRemoveBtn($event)">
-            <a th:href="@{'/article/update/'+${article.id}}"><div class="pull-left">
-                <img ng-if="article.coverImg!=null" ng-src="{{article.coverImg}}" class="width80 height80">
-            </div></a>
+            <div class="pull-left">
+                <a ng-href="/article/update/{{article.id}}"><img ng-if="article.coverImg!=null" ng-src="{{article.coverImg}}" class="width80 height80">
+                </a>
+            </div>
             <div class="pull-left padding10">
-                <a th:href="@{'/article/update/'+${article.id}}"><div class="height50">
-                    <h3 ng-bind="article.title"></h3>
+               <div class="height50">
+                   <a ng-href="/article/update/{{article.id}}"><h3 ng-bind="article.title"></h3>
                     <p ng-bind="article.summarize"></p>
-                </div></a>
+                   </a>
+                </div>
                 <div class="height10">
                     <small class="text-muted">{{article.createdTime | date:'yyyy-MM-dd HH:mm'}}</small>
                     <i class="fa fa-trash-o text-muted remove margin-left10" ng-click="removeArticle($index,article.id)"></i>
